--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt-web",
-  "version": "2.11.0",
+  "version": "3.0.0-20240821",
   "private": false,
   "description": "ChatGPT网页版",
   "author": "ikiwi <ikiwicc@gmail.com>",
