--- a/service/.env.example
+++ b/service/.env.example
@@ -1,14 +1,14 @@
 # OpenAI API Key - https://platform.openai.com/overview
-OPENAI_API_KEY=
+OPENAI_API_KEY=sk-Xaw850bb979df7cf592636fb512c0d5002103c72107ciuma
 
 # change this to an `accessToken` extracted from the ChatGPT site's `https://chat.openai.com/api/auth/session` response
 OPENAI_ACCESS_TOKEN=
 
 # OpenAI API Base URL - https://api.openai.com
-OPENAI_API_BASE_URL=
+OPENAI_API_BASE_URL=https://api.gptsapi.net
 
 # OpenAI API Model - https://platform.openai.com/docs/models
-OPENAI_API_MODEL=
+OPENAI_API_MODEL=gpt-4o
 
 # set `true` to disable OpenAI API debug log
 OPENAI_API_DISABLE_DEBUG=
