--- a/service/package.json
+++ b/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt-web-service",
-  "version": "1.0.0",
+  "version": "3.0.0-20240821",
   "private": false,
   "description": "ChatGPT Web Service",
   "author": "ikiwi <ikiwicc@gmail.com>",
