--- a/service/.env.example
+++ b/service/.env.example
@@ -1,5 +1,5 @@
 # OpenAI API Key - https://platform.openai.com/overview
-OPENAI_API_KEY=sk-Xaw850bb979df7cf592636fb512c0d5002103c72107ciuma
+OPENAI_API_KEY=
 
 # change this to an `accessToken` extracted from the ChatGPT site's `https://chat.openai.com/api/auth/session` response
 OPENAI_ACCESS_TOKEN=
